Reorganize project for distribution